--- a/visual-planner/package.json
+++ b/visual-planner/package.json
@@ -8,9 +8,13 @@
   "dependencies": {
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
+    "d3": "~4.2.0",
     "debug": "~2.2.0",
     "express": "~4.13.4",
+    "express-jquery": "^1.8.3",
     "jade": "~1.11.0",
+    "jquery": "^3.1.0",
+    "jsdom": "^3.1.2",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
   }
